<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<!--    <Preference android:title="@string/prefs_custom_webpages" >
        <intent android:action="android.intent.action.VIEW"
                android:data="http://www.example.com" />
    </Preference>-->


    <PreferenceCategory
            android:title="@string/title_preference_category_custompages">

        <Preference android:title="@string/prefs_custom_webpages" >
            <intent android:action="ch.icarosdev.webviewloadlib.custompages.ui.CONFIGURATION_PAGES"
                    android:targetPackage="ch.icarosdev.basisrauschmeteo"
                    android:targetClass="ch.icarosdev.webviewloadlib.custompages.ui.CustomPagesListActivity"/>
        </Preference>

        <CheckBoxPreference
                android:key="checkbox_activate_custompages"
                android:title="@string/title_checkbox_activate_custompages"
                android:summary="@string/summary_checkbox_activate_custompages" />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/dialog_based_preferences">

        <EditTextPreference
                android:key="edittext_preference"
                android:title="@string/title_edittext_preference"
                android:summary="@string/summary_edittext_preference"
                android:dialogTitle="@string/dialog_title_edittext_preference" />

        <ListPreference
                android:key="list_preference"
                android:title="@string/title_list_preference"
                android:summary="@string/summary_list_preference"
                android:entries="@array/entries_list_preference"
                android:entryValues="@array/entryvalues_list_preference"
                android:dialogTitle="@string/dialog_title_list_preference" />

        <MultiSelectListPreference
                android:id="@+id/multilist_prefs"
                android:dialogTitle="@string/mode_repeat"
                android:key="mode_repeat"
                android:summary=""
                android:title="@string/mode_repeat"
                android:entries="@array/weekdays"
                android:entryValues="@array/weekdays_values"
                android:defaultValue="@array/empty_array">

        </MultiSelectListPreference>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/launch_preferences">

        <!-- This PreferenceScreen tag sends the user to a new fragment of
             advanced_preferences.  If running in a large screen, they can be embedded
             inside of the overall advanced_preferences UI. -->
        <PreferenceScreen
                android:fragment="ch.icarosdev.basisrauschmeteo.BasisrauschPreferenceActivity$Prefs1FragmentInner"
                android:title="@string/title_fragment_preference"
                android:summary="@string/summary_fragment_preference">
            <!-- Arbitrary key/value pairs can be included for fragment arguments -->
            <extra android:name="someKey" android:value="somePrefValue" />
        </PreferenceScreen>

        <!-- This PreferenceScreen tag sends the user to a completely different
             activity, switching out of the current advanced_preferences UI. -->
        <PreferenceScreen
                android:title="@string/title_intent_preference"
                android:summary="@string/summary_intent_preference">

            <intent android:action="android.intent.action.VIEW"
                    android:data="http://www.android.com" />

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/preference_attributes">

        <CheckBoxPreference
                android:key="parent_checkbox_preference"
                android:title="@string/title_parent_preference"
                android:summary="@string/summary_parent_preference" />

        <!-- The visual style of a child is defined by this styled theme attribute. -->
        <CheckBoxPreference
                android:key="child_checkbox_preference"
                android:dependency="parent_checkbox_preference"
                android:layout="?android:attr/preferenceLayoutChild"
                android:title="@string/title_child_preference"
                android:summary="@string/summary_child_preference" />

    </PreferenceCategory>
</PreferenceScreen>